--- a/mcp-custom/Dockerfile
+++ b/mcp-custom/Dockerfile
@@ -10,6 +10,8 @@ RUN apt-get update && \
 
 COPY . /app
 WORKDIR /app
+# for Filesystem MCP
+RUN mkdir /app/Workspace 
 RUN pip install mcpo uv
 # Replace with your MCP server command; example: uvx mcp-server-time
 CMD ["uvx", "mcpo", "--port", "8000", "--api-key", "top-secret", "--", "mcpo", "--config", "./config.json"]
